# takh

./: .clang-format  .gitignore  LICENSE  meson.build
assets/: basic.fs  basic.vs  chunk.fs  chunk.vs
include/: chunk.h  common.h  resource.h  voxel.h  window.h
include/graphic/: camera.h  gl.h  shader.h  texture.h  vertex.h
include/util/: rng.h
scripts/: gen_gl.sh  gl.procs  pack_assets.sh
src/: chunk.c  chunk_generic.c  resource.c  takh.c  voxel.c  window.c
src/graphic/: camera.c  gl.c  shader.c  texture.c  vertex.c
src/util/: log.c  rng.c
